2012-04-16  Sergio Martin <sergio.martin@artica.es>

	* operation/menu.php: Switched the visual console and custom reports
	order in the menu and change the main Reporting section link 
	to give more important to reports.

2012-04-16  Sergio Martin <sergio.martin@artica.es>

	* include/functions_visual_map.php: Fixed minimum size on 
	dashboards graphs into visual maps widget and a ugly sql error 
	bug

2012-04-16  Vanessa Gil  <vanessa.gil@artica.es>

	* extensions/tree.php
	  extensions/tree/no_branch.png
	  extensions/tree/branch.png
	  extensions/tree/closed.png
	  extensions/tree/expanded.png
	  extensions/tree/first_closed.png
	  extensions/tree/first_expanded.png
	  extensions/tree/last_closed.png
	  extensions/tree/last_expanded.png
	  extensions/tree/last_leaf.png
	  extensions/tree/leaf.png
	  extensions/tree/one_closed.png
	  extensions/tree/one_expanded.png. Added files to new open tree view.

2012-04-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/styles/dialog.css
	 include/styles/pandora.css
	 operation/system_alert.php
	 include/functions_config.php
	 general/login_page.php: Modified style in UM license advises, also
	 modified style in system alerts dialog. 

	* include/functions_ui.php: Modified function ui_print_message to 
	allow force the style.
	
	* include/styles/pandora_legacy.css: New css style with Pandora old
	style "legacy". New style has 100% page width.

2012-04-14  Junichi Satoh  <junichi@rworks.jp>

	* operation/agentes/stat_win.php: Merged from trunk. Fixed i18n support.

2012-04-14  Junichi Satoh  <junichi@rworks.jp>

	* pandoradb.postgreSQL.sql: Merged from trunk. Fixed database creation
	failure with version 9.0 or later of PostgreSQL.

2012-04-12 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_config.php, index.php,
	extensions/update_manager/lib/functions.ajax.php,
	extensions/update_manager/lib/functions.php,
	extensions/update_manager/main.php,
	extensions/update_manager/update_pandora.php,